syntax = "proto3";

// zveloAPI
package zvelo.msg;

option go_package = "zvelo.io/msg";

import "zvelo/msg/query.proto";
import "google/api/annotations.proto";

service API {
  // Create new URL query
  rpc QueryURLV1(QueryURLRequests) returns (QueryReplies) {
    option (google.api.http) = {
      post: "/v1/queries/url"
      body: "*"
    };
  }

  // Create new content query
  rpc QueryContentV1(QueryContentRequests) returns (QueryReplies) {
    option (google.api.http) = {
      post: "/v1/queries/content"
      body: "*"
    };
  }

  // Results of active or unexpired query
  rpc QueryResultV1(QueryPollRequest) returns (QueryResult) {
    option (google.api.http) = {
      get: "/v1/queries/result/{request_id}"
    };
  }
}
