syntax = "proto3";

package msg;

option go_package = "zvelo.io/msg";

message Status {
  enum Code {
    UNKNOWN = 0;
    OK = 200;
    CREATED = 201;
    ACCEPTED = 202;
    MULTIPLE_CHOICES   = 300;
    MOVED_PERMANENTLY  = 301;
    FOUND             = 302;
    SEE_OTHER          = 303;
    NOT_MODIFIED       = 304;
    USE_PROXY          = 305;
    TEMPORARY_REDIRECT = 307;
    BAD_REQUEST = 400;
    UNAUTHORIZED = 401;
    FORBIDDEN = 403;
    NOT_FOUND = 404;
    REQUEST_TIMEOUT = 408;
    CONFLICT = 409;
    PRECONDITION_FAILED = 412;
    REQUESTED_RANGE_NOT_SATISFIABLE = 416;
    INTERNAL_SERVER_ERROR = 500;
    NOT_IMPLEMENTED = 501;
    BAD_GATEWAY = 502;
    SERVICE_UNAVAILABLE = 503;
    GATEWAY_TIMEOUT = 504;
  }

  Code code = 1;
  string message = 2;
  Status fetch_status = 3;
  string location = 4;
}
